cabal-version: 3.0

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/mit/issues
category: CLI
copyright: Copyright (C) 2020 Mitchell Rosen
homepage: https://github.com/mitchellwrosen/mit
license: MIT
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: mit-3qvpPyAi6mH
stability: experimental
synopsis: A git wrapper with a streamlined UX
version: 7

description:
  A git wrapper with a streamlined UX.

  To install the @mit@ command-line tool, run one of the following:

  @
  cabal install -w ghc-8.10.7 mit-3qvpPyAi6mH
  cabal install -w ghc-9.0.2 mit-3qvpPyAi6mH
  @

  This package's library component does not follow the Package Versioning Policy, and is only exposed for the test
  suite.

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/mit.git

common component
  build-depends:
    base64 == 0.4.2.3,
    ki == 0.2.0.1,
    parsec == 3.1.15.0,
    process == 1.6.13.2,
    record-dot-preprocessor == 0.2.13,
    record-hasfield == 1.0,
    text == 1.2.5.0,
    text-ansi == 0.1.1,
    unix == 2.7.2.2,
  if impl(ghc == 9.0.2)
    build-depends:
      base == 4.15.1.0,
      containers == 0.6.4.1,
      directory == 1.3.6.2,
  -- impl(ghc == 8.10.7)
  else
    build-depends:
      base == 4.14.3.0,
      containers == 0.6.5.1,
      directory == 1.3.6.0,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror=incomplete-patterns

library
  import: component
  exposed-modules:
    Mit
    Mit.Builder
    Mit.Config
    Mit.Directory
    Mit.Git
    Mit.GitCommand
    Mit.Prelude
    Mit.Process
    Mit.Seq
    Mit.Seq1
    Mit.Stanza
    Mit.State
    Mit.Undo
  ghc-options: -fplugin=RecordDotPreprocessor
  hs-source-dirs: src

executable mit
  import: component
  build-depends:
    mit-3qvpPyAi6mH,
  ghc-options: -threaded -with-rtsopts=-N2
  hs-source-dirs: app
  main-is: Main.hs
