cabal-version: 3.0

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/mit/issues
category: CLI
copyright: Copyright (C) 2020-2022 Mitchell Rosen
homepage: https://github.com/mitchellwrosen/mit
license: MIT
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: mit-3qvpPyAi6mH
stability: experimental
synopsis: A git wrapper with a streamlined UX
version: 11

description:
  A git wrapper with a streamlined UX.

  To install the @mit@ command-line tool, run the following:

  @
  cabal install mit-3qvpPyAi6mH
  @

  This package's library component does not follow the Package Versioning Policy.

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/mit.git

common component
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    ImplicitParams
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Werror=incomplete-patterns
    -Wno-all-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

library
  import: component
  build-depends:
    base == 4.18.1.0,
    base64 == 0.4.2.4,
    containers == 0.6.8,
    directory == 1.3.8.1,
    ki == 1.0.1.1,
    optparse-applicative == 0.17.0.0,
    parsec == 3.1.17.0,
    process == 1.6.18.0,
    stm == 2.5.2.1,
    text == 2.1,
    text-ansi == 0.3.0.1,
    text-builder-linear == 0.1.2,
    unix == 2.8.3.0,
  exposed-modules:
    Mit
    Mit.Command.Branch
    Mit.Command.Status
    Mit.Directory
    Mit.Env
    Mit.Git
    Mit.Monad
    Mit.Prelude
    Mit.Pretty
    Mit.Process
    Mit.Seq
    Mit.Seq1
    Mit.State
    Mit.Undo
  hs-source-dirs: src

executable mit
  import: component
  build-depends:
    base,
    mit-3qvpPyAi6mH,
  ghc-options: -O -threaded -with-rtsopts=-N2
  hs-source-dirs: app
  main-is: Main.hs
