cabal-version: 3.0
name: mit
version: 0

executable mit
  build-depends:
    base,
    base64,
    directory,
    process,
    text,
    text-ansi,
  default-extensions:
    BlockArguments
    DerivingStrategies
    FlexibleInstances
    GADTs
    LambdaCase
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -O -threaded -Wall
  main-is: Main.hs
