cabal-version: 3.0
name: mit
version: 0

executable mit
  build-depends:
    base,
    base64,
    clock,
    directory,
    process,
    record-dot-preprocessor,
    record-hasfield,
    text,
    text-ansi,
    unix,
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -O -threaded -Wall
  main-is: Main.hs
